# ChangeLog for dev-perl/MailTools
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/MailTools/ChangeLog,v 1.64 2009/01/01 19:44:05 armin76 Exp $

  01 Jan 2009; Raúl Porcel <armin76@gentoo.org> MailTools-2.04.ebuild:
  Add ~s390

  23 Oct 2008; Torsten Veller <tove@gentoo.org> MailTools-2.04.ebuild:
  Mips didn't keyword dev-perl/TimeDate. Dropping mips.

*MailTools-2.04 (23 Oct 2008)

  23 Oct 2008; Torsten Veller <tove@gentoo.org> +MailTools-2.04.ebuild:
  Version bump

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -MailTools-1.67.ebuild,
  -MailTools-1.74.ebuild, -MailTools-1.76.ebuild:
  Cleanup

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> MailTools-1.77.ebuild:
  Stable for HPPA too.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> MailTools-1.77.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  MailTools-1.77.ebuild:
  Stable on ppc.

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> MailTools-1.77.ebuild:
  alpha/ia64/x86 stable

  07 Jul 2007; Tom Gall <tgall@gentoo.org> MailTools-1.77.ebuild:
  stable on ppc64

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  MailTools-1.76.ebuild, MailTools-1.77.ebuild:
  Marking sparc stable

*MailTools-1.77 (12 May 2007)

  12 May 2007; Michael Cummings <mcummings@gentoo.org>
  +MailTools-1.77.ebuild:
  Version bump

*MailTools-1.76 (16 Apr 2007)

  16 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +MailTools-1.76.ebuild:
  Version bump

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> MailTools-1.74.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> MailTools-1.74.ebuild:
  Stable on x86, bug #169152.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -MailTools-1.60.ebuild, -MailTools-1.65.ebuild, MailTools-1.67.ebuild,
  MailTools-1.74.ebuild:
  Ebuild maintenance

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> MailTools-1.74.ebuild:
  Stable on Alpha.
