@@ -1,6 +1,8 @@
 DIST MailTools-1.77.tar.gz 48574 RMD160 1aabb1019b8afbd95a05cb4e02dc2ec31577437c SHA1 32de77a2826e0c7d89c62002ef5cf0d1ba32b23e SHA256 9bc63a8a0dee3c17269e2974cdddab237fafad292e19dd377ae6dcedd2d068d4
 DIST MailTools-2.04.tar.gz 52292 RMD160 7a8d149e3d3c8fc9e65166590637eed5115b2cb2 SHA1 6fccd04f9db0f478e19eec047be3bf0a1d8297f5 SHA256 bda9734b212343d8e4ec2743a98e1383f354f3a2bb8a6d6d93176cf233cb2171
+DIST MailTools-2.05.tar.gz 52978 RMD160 94bba9c351845e397e461703bb008e7052da0a59 SHA1 0aeb4cfb8398c93d5b22ac3e6aa08ae4e0fe135c SHA256 4486353793700241338fd5b57cb8d3ccb9b18cfbced2a5a922a6a4db218eb49c
 EBUILD MailTools-1.77.ebuild 563 RMD160 963799d37ef62f1ea6880dede6b6720805c2f6e2 SHA1 084e3700e104135aa78fed1fed43cf1027062a89 SHA256 37974ae0d7c8409d17b039eca1e0a3a2eb60fdfb0cf145759af938f00eaf0761
 EBUILD MailTools-2.04.ebuild 572 RMD160 ac5f528114bc3fe05c42d71e824ffd60464c3815 SHA1 2775861cf37b5b0611fae62c55bd55e73391fee3 SHA256 1fdcc20a718b751491512c584691d452061e4d4b2c0b1859553606989297b9db
-MISC ChangeLog 7331 RMD160 caa25b81c380f3d1ed7165f06525cff2f714bc19 SHA1 49440d3534aa76516ea6d5fdc14b1f14166559b8 SHA256 d7990e6beec55e72ee85f391bc377db74f8116abe1af01a44cc20cff53254b2d
+EBUILD MailTools-2.05.ebuild 531 RMD160 a01c60955e72fe0dfe3f0819006cd967a35a5fc9 SHA1 a62d6b9eb1cb7dda2e125777a88d66c100c8f45b SHA256 10a1ad5011c20990b1ddbe395adf44658c8254054154e5fe0a4fc5902d31f517
+MISC ChangeLog 7447 RMD160 8143e87fb835768d7cf19a4bd547dcb9e30e2caa SHA1 a99c4e6030f8a6e233d9322335a2f5f8e957c1ba SHA256 334a191166a1e352bb1afe22a828812a8f514c44130f4ac7e2c2e887ac1927fc
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
