@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/MailTools
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MailTools/ChangeLog,v 1.64 2009/01/01 19:44:05 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MailTools/ChangeLog,v 1.65 2009/12/19 11:19:51 tove Exp $
+
+*MailTools-2.05 (19 Dec 2009)
+
+  19 Dec 2009; Torsten Veller <tove@gentoo.org> +MailTools-2.05.ebuild:
+  Version bump
 
   01 Jan 2009; Raúl Porcel <armin76@gentoo.org> MailTools-2.04.ebuild:
   Add ~s390
